<resources>
    <string name="app_name">Geomindr</string>
    <string name="facebook_app_id">205379066538184</string>
    <string name="title_activity_main">Geomindr</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="rem_action_mode_title">%1$d selected</string>
    <string name="google_maps_key">AIzaSyAfCV3yZZA2kJqKvandPQ8_C6PicSQ4YOQ</string>
    <string name="start_reminder_service">Start Reminder Service</string>
    <string name="stop_reminder_service">Stop Reminder Service</string>
    <string name="nav_task">Task Based Reminder</string>
    <string name="nav_entity">Entity Based Reminder</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_home">Home</string>
    <string name="alarm_task_title">Alarm Task Title</string>
    <string name="alarm_task_desc">Alarm Task Description</string>
    <string name="alarm_location_text_view">Location</string>
    <string name="alarm_task_location">Trigger Alarm at Location?</string>
    <string name="save">Save Reminder</string>
    <string name="discard">Discard Reminder</string>
    <string name="map_search">Search</string>
    <string name="facebook_icon">&#xf09a;</string>
    <string name="rem_delete">Delete</string>
    <string name="rem_edit">Edit</string>
    <string name="message_task_phone_number">Recipient\'s Phone Number</string>
    <string name="message_task_arrival">Message Upon Arrival</string>
    <string name="message_task_departure">Message Upon Departure</string>
    <string name="message_task_location">Trigger Message at Location?</string>
    <string name="facebook_text">Log in with Facebook to allow the app to post to your Facebook wall.</string>
    <string name="facebook_task_msg">Message To Post On Facebook Wall</string>
    <string name="atm">ATM</string>
    <string name="food">Food</string>
    <string name="random_location">Random Location</string>
    <string name="particular_location">Particular Location</string>
    <string name="cancel">Cancel</string>
    <string name="hospital">Hospital</string>
    <string name="police">Police</string>
    <string name="mall">Mall</string>
    <string name="medical">Medical</string>
    <string name="gym">Gym</string>
    <string name="bank">Bank</string>
    <string name="postal">Postal</string>
    <string name="bar">Bar</string>
    <string name="library">Library</string>
    <string name="movie">Movie</string>
    <string name="books">Books</string>
    <string name="gov_off">Govt. Off.</string>
    <string name="petrol">Petrol</string>
    <string name="any_location">Any Location</string>
    <string name="info_window_location_name">Location :</string>
    <string name="info_window_location_distance">Distance :</string>
    <string name="post_to_facebook">Post to Facebook</string>
</resources>