<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_message_task"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.harish.geomindr.activity.tbr.message.MessageTask">

    <RelativeLayout
        android:id="@+id/contact_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_phone_number_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/recipient_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/message_task_phone_number"
                android:layout_alignParentStart="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_contacts_white_24dp"
            app:backgroundTint="@color/colorPrimaryDark"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="10sp"/>
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_msg_arrival"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_layout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/msg_arrival"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/message_task_arrival"
            android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_msg_departure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_layout_msg_arrival"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/msg_departure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/message_task_departure"
            android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_layout_msg_departure"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/msg_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/message_task_location"
                android:layout_alignParentStart="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_location_white_24dp"
            app:backgroundTint="@color/colorPrimaryDark"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="10sp"/>
    </RelativeLayout>

    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        android:id="@+id/radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_layout"
        android:layout_marginTop="20dp"
        app:dsb_min="100"
        app:dsb_max="2000"
        app:dsb_value="1000"
        app:dsb_progressColor="@color/colorPrimaryDark"
        app:dsb_indicatorColor="@color/colorPrimaryDark"
        app:dsb_indicatorFormatter="Radius: %d"
        android:layout_marginEnd="-13dp"
        android:layout_marginStart="-13dp"/>

    <Button
        android:text="@string/save"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radius"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_msg_save"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff" />

    <Button
        android:text="@string/discard"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_msg_save"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_msg_discard"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff"/>
</RelativeLayout>
</ScrollView>